fixed some pathing issues, then had console.log and debug break on me

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ article {
   height: 100%; 
   width: 75%; 
   margin: 10%;
+  border-color: #bcaf96;
   border-width: 10px;  
   padding: 2.5%;  
 
